--- a/index.html
+++ b/index.html
@@ -4,56 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+        a{
+            display: block;
+            margin-bottom: 10px;
+
+        }
+    </style>
 </head>
 <body>
-    <a href="./lv1/nine-nine.html">
-        LV.1  Nine-Nine Multiplication Table
-    </a>
-    <br>
-    <a href="./lv2/clock.html">
-        LV.2  Clock
-    </a>
-    <br>
-    <a href="./lv3/calculator.html">
-        LV.3  Caculator
-    </a>
-    <br>
-    <a href="./lv4/timezone.html">
-        LV.4  TimeZone
-    </a>
-    <br>
-    <a href="./lv5/air.html">
-        LV.5  Airpollution Board
-    </a>
-    <br>
-    <a href="./lv6/calculatorGame.html">
-        LV.6  Calculator Game
-    </a>
-    <br>
-    <a href="./lv7/tablet.html">
-        LV.7  Drawing Tablet
-    </a>
-    <br>
-    <a href="./lv8/tictactoe.html">
-        LV.8  TicTacToe
-    </a>
-    <br>
-    <a href="./lv9/turntable.html">
-        LV.9  Turntable
-    </a>
-    <br>
-    <a href="">
-        LV.10  clock
-    </a>
-    <br>
-    <a href="">
-        LV.11  clock
-    </a>
-    <br>
-    <a href="">
-        LV.12  clock
-    </a>
-    <br>
+    <div class="container">
+        <a href="./lv1/nine-nine.html">
+            LV.1  Nine-Nine Multiplication Table
+        </a>
+        <a href="./lv2/clock.html">
+            LV.2  Clock
+        </a>
+        <a href="./lv3/calculator.html">
+            LV.3  Caculator
+        </a>
+        <a href="./lv4/timezone.html">
+            LV.4  TimeZone
+        </a>
+        <a href="./lv5/air.html">
+            LV.5  Airpollution Board
+        </a>
+        <a href="./lv6/calculatorGame.html">
+            LV.6  Calculator Game
+        </a>
+        <a href="./lv7/tablet.html">
+            LV.7  Drawing Tablet
+        </a>
+        <a href="./lv8/tictactoe.html">
+            LV.8  TicTacToe
+        </a>
+        <a href="./lv9/turntable.html">
+            LV.9  Turntable
+        </a>
+    </div>
+    
 
 </body>
 </html>
