--- a/lv8/tictactoe.html
+++ b/lv8/tictactoe.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="app">
-        <div class="start" v-show="start">
+        <div class="start" v-show="opening">
             <ul class="start-content field">
                 <li><span class="start-content-text">TIC</span></li>
                 <li>
@@ -37,7 +37,7 @@
             </ul>
             <input type="button" class="btn start-btn" value="START" @click="gameStart">
         </div>
-        <div class="game" v-show="start==false">
+        <div class="game" v-show="opening==false">
             <div class="game-scoreboard">
                 <div class="game-scoreboard-player">
                     <span class="icon iconx" :class="{'turn':round ==1}"><i class="fas fa-times"></i></span>
@@ -61,7 +61,6 @@
         </div>
     </div>
     <script>
-        let test = 'wow';
         var vm = new Vue({
             el: "#app",
             data: {
@@ -74,15 +73,15 @@
                     x: 0,
                 },
                 round: 0,//first:0,second:1
-                start: true,
+                opening: true,
                 results: {
                     ongoing: false,
                     owin: false,
                     xwin: false,
                     draw: false
                 },
-                gameSituation: [2, 2, 2, 2, 2, 2, 2, 2, 2],
-                successCondition: [
+                gameSitn: [2, 2, 2, 2, 2, 2, 2, 2, 2],
+                successConds: [
                     [1, 2, 3], [4, 5, 6], [7, 8, 9],
                     [1, 4, 7], [2, 5, 8], [3, 6, 9],
                     [1, 5, 9], [3, 5, 7]
@@ -91,61 +90,60 @@
             methods: {
                 restart: function () {
                     document.querySelector('body').style.background = 'black';
-                    this.score.o = 0;
-                    this.score.x = 0;
-                    this.round = 0;
-                    this.start = true;
+                    this.score={
+                        o:0,
+                        x:0,
+                    }
+                    this.opening = true;
                     for (item in this.results) {
                         this.results[item] = false;
                     }
-                    this.gameSituation = [2, 2, 2, 2, 2, 2, 2, 2, 2];
+                    this.gameSitn = [2, 2, 2, 2, 2, 2, 2, 2, 2];
                     var nestedLis = document.querySelectorAll('.game-field > li');
                     [].forEach.call(nestedLis, function (li) {
                         li.innerHTML = "";
                     });
                 },
                 gameStart: function () {
+                    console.log('here');
                     document.querySelector('body').style.background = '#FF6D70';
-                    this.start = false;
+                    this.opening = false;
                     this.results.ongoing = true;
                 },
                 gamecontroller: function (e) {
                     let clicked = e.target.value;
-                    if (this.gameSituation[clicked - 1] == 2 && this.round == 0) {
+                    if (this.gameSitn[clicked - 1] == 2 && this.round == 0) {
                         e.target.innerHTML = `<i class="far fa-circle"></i>`;
                         this.score.o += 1;
-                        this.gameSituation[clicked - 1] = 0;
+                        this.gameSitn[clicked - 1] = 0;
                         this.round = 1;
                     }
-                    else if (this.gameSituation[clicked - 1] == 2 && this.round == 1) {
+                    else if (this.gameSitn[clicked - 1] == 2 && this.round == 1) {
                         e.target.innerHTML = `<i class="fas fa-times"></i>`;
                         this.score.x += 1;
-                        this.gameSituation[clicked - 1] = 1;
+                        this.gameSitn[clicked - 1] = 1;
                         this.round = 0;
                     }
                     this.judge(clicked);
                 },
                 judge: function (pos) {
-                    let success = this.successCondition;
-                    success.forEach((item, index) => {
-                        if (item.indexOf(pos) != -1) {
-                            let judgeArr = [this.gameSituation[item[0] - 1], this.gameSituation[item[1] - 1], this.gameSituation[item[2] - 1]];
+                    this.successConds.forEach((cond, index) => {
+                        if (cond.indexOf(pos) != -1) {
+                            let sidnOftheCond = [this.gameSitn[cond[0] - 1], this.gameSitn[cond[1] - 1], this.gameSitn[cond[2] - 1]];
                             let count = 0;
-                            judgeArr.forEach((value) => {
-                                if (value == this.gameSituation[pos - 1]) count++
+                            sidnOftheCond.forEach((value) => {
+                                if (value == this.gameSitn[pos - 1]) count++
                             })
-                            if (count === judgeArr.length) {
+                            if (count === sidnOftheCond.length) {
                                 this.results.ongoing = false;
-                                switch (this.gameSituation[pos - 1]) {
+                                switch (this.gameSitn[pos - 1]) {
                                     case 0:
                                         this.results.owin = true;
-                                        console.log('owin');
                                         localStorage.setItem('winTimesO', parseInt(this.history.o) + 1);
                                         this.history.o = localStorage.getItem('winTimesO');
                                         break;
                                     case 1:
                                         this.results.xwin = true;
-                                        console.log('xwin');
                                         localStorage.setItem('winTimesX', parseInt(this.history.x) + 1);
                                         this.history.x = localStorage.getItem('winTimesX');
                                         break;
